[package]
name = "vta-service"
description = "Service for Verifiable Trust Agents operating in Verifiable Trust Communities"
version = "0.7.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[features]
default = ["setup", "keyring", "rest", "didcomm", "cli-synthesis"]
rest = []
didcomm = []
webvh = ["dep:didwebvh-rs", "dep:url", "dep:reqwest"]
setup = ["webvh", "dep:tempfile"]
# Enables the offline CLI command helpers (bootstrap_cli, webvh_cli) that
# synthesize super-admin `AuthClaims` without wire-level verification. The
# local `vta` binary enables this; the enclave binary does not (its
# dependency is `default-features = false`), so the footgun is physically
# absent from enclave builds.
cli-synthesis = ["vti-common/cli-synthesis"]
# OS keyring backend for the VTA seed. Enables vta-sdk's keyring feature
# so the binary can register a platform store once via
# `vta_sdk::keyring_init::install_default_store()` at startup.
keyring = ["dep:keyring-core", "vta-sdk/keyring"]
config-seed = []
aws-secrets = ["dep:aws-sdk-secretsmanager", "dep:aws-config"]
gcp-secrets = [
  "dep:google-cloud-secretmanager-v1",
  "dep:google-cloud-auth",
  "dep:bytes",
]
azure-secrets = ["dep:azure_security_keyvault_secrets", "dep:azure_identity"]
vault-secrets = ["dep:vaultrs"]
tee = [
  "webvh",
  "dep:libc",
  "dep:aws-sdk-kms",
  "dep:aws-config",
  "dep:aws-lc-rs",
  "dep:didwebvh-rs",
  "dep:cbc",
  "dep:aes",
]
vsock-store = ["vti-common/vsock-store"]
# Exposes the test-harness helpers (in-memory keyspaces, VTA bootstrap
# for provision-integration) as `pub` items so integration tests under
# `tests/` can build complete VTA state the same way the lib unit tests
# do. Enable via a `[dev-dependencies]` `features = ["test-support"]`
# entry in the downstream crate. Not meant for production builds.
test-support = ["webvh", "dep:tempfile"]

[lib]
name = "vta_service"
path = "src/lib.rs"

[[bin]]
name = "vta"
path = "src/main.rs"
# `bootstrap_cli` and `webvh_cli` call
# `AuthClaims::unsafe_local_cli_super_admin`, which is gated on
# `vti-common/cli-synthesis`. Without this feature the binary cannot
# link, so let cargo skip it cleanly instead of failing with a
# "method not found" deep in the build.
required-features = ["cli-synthesis"]

[dependencies]
vti-common = { path = "../vti-common", version = "0.8", features = ["encryption", "passkey"] }
vta-sdk = { path = "../vta-sdk", version = "0.8", features = ["didcomm", "sealed-transfer", "provision-integration"] }
# DID-VM-resolved WebAuthn assertion verifier — drives the new
# `vta/auth/passkey-login-{start,finish}/1.0` trust-task handlers.
# Distinct from `webauthn-rs` (which drives the passkey *enrolment*
# ceremony in `operations::passkey_vms`); this crate handles the
# *assertion* (login) path against DID-document VMs.
vti-webauthn = { path = "../vti-webauthn", version = "0.1" }
# Trust-Tasks framework — wire-envelope for the trust-task migration.
# `trust-tasks-rs` provides TrustTask<P>, Proof, dispatcher types.
# `trust-tasks-https` provides the HttpsHandler adapter + status-code
# mapping for the framework's error vocabulary.
# `trust-tasks-proof` provides AffinidiVerifier for embedded
# Data-Integrity proofs on trust-tasks themselves.
trust-tasks-rs = { workspace = true }
trust-tasks-https = { workspace = true }
trust-tasks-proof = { workspace = true }
# Shared CLI helpers for the consumer side of sealed-transfer (request
# generation, bundle opening). Used by `vta bootstrap request` /
# `vta bootstrap open` so cold-start clients can run the offline flow
# without depending on `pnm`.
vta-cli-common = { path = "../vta-cli-common", version = "0.7" }
affinidi-crypto = { workspace = true }
# Low-level `Secret` type for loading the VTA's signing key at
# provision time. Already transitively present via affinidi-tdk; made
# direct so `vta-service::operations::provision_integration` can name
# the type.
affinidi-secrets-resolver = { workspace = true }
hkdf = { workspace = true }
affinidi-tdk = { workspace = true }
affinidi-messaging-didcomm = "0.13"
affinidi-messaging-didcomm-service = { workspace = true }
async-trait = "0.1"
affinidi-tdk-common = "0.6"
affinidi-did-resolver-cache-sdk = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
base64 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
jsonwebtoken = { workspace = true }
fjall = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true, features = ["trace", "limit", "cors"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bip39 = "2"
ed25519-dalek = { workspace = true }
ed25519-dalek-bip32 = { workspace = true }
hex = { workspace = true }
keyring-core = { workspace = true, optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-config = { version = "1", features = [
  "behavior-version-latest",
], optional = true }
google-cloud-secretmanager-v1 = { version = "1", optional = true }
google-cloud-auth = { version = "1", optional = true }
bytes = { version = "1", optional = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
didwebvh-rs = { workspace = true, optional = true }
rand = { workspace = true }
dialoguer = { workspace = true }
# Locate `~/.config/vta/` for the `vta bootstrap request` / `vta bootstrap
# open` consumer-side seed cache. Default seed dir only — operators can
# override with `--seed-dir`.
dirs = { workspace = true }
azure_security_keyvault_secrets = { workspace = true, optional = true }
azure_identity = { workspace = true, optional = true }
# HashiCorp Vault client (vault-secrets feature). Supports KV v2 + the
# Kubernetes / token / AppRole auth methods we expose. `rustls` is
# vaultrs's default TLS backend, matching the rest of the workspace.
vaultrs = { version = "0.8", optional = true }
sha2 = { workspace = true }
# Constant-time byte equality. Used by `backup_bundle_store` to
# verify backup-bundle bearer tokens against their stored
# `SHA-256(token)` hash without leaking byte-position via timing.
subtle = { workspace = true }
cbc = { version = "0.2", optional = true }
aes = { version = "0.9", optional = true }
x25519-dalek = { workspace = true }
multibase = { workspace = true }
p256 = "0.13"
# WebAuthn — used by `operations::passkey_vms` to drive the
# registration ceremony for passkey-as-verificationMethod enrolment.
webauthn-rs = { workspace = true }
webauthn-rs-proto = "0.5"
# CBOR decoder for parsing the WebAuthn attestationObject's authData
# so the VTA can re-derive the COSE public key and reject any
# tampered browser-supplied multikey.
ciborium = "0.2"
url = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tempfile = { version = "3", optional = true }
libc = { workspace = true, optional = true }
zeroize = { version = "1", features = ["derive"] }
tower = { version = "0.5", features = ["limit"] }
# Per-IP rate limiting for unauthenticated endpoints (`/bootstrap/request`,
# `/auth/*`) so a flood of requests can't burn CPU on attestation / crypto.
tower_governor = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
aes-gcm = { workspace = true }
argon2 = "0.5"
hmac = "0.13"
aws-sdk-kms = { version = "1", optional = true }
# RSA-OAEP for KMS CiphertextForRecipient unwrap. aws-lc-rs is AWS's own
# BoringSSL-based crypto lib; constant-time operations, already transitive
# via aws-sdk-* so no new build-time cost. Replaces the RustCrypto `rsa`
# crate (RUSTSEC-2023-0071 — non-constant-time PKCS#1 v1.5 / OAEP
# decryption). Our use was ephemeral-key + KMS-only so the advisory
# didn't map directly to exploitation, but dropping the dep frees us
# from the RustCrypto 0.11 ecosystem HOLD above.
aws-lc-rs = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
urlencoding = "2"
# Self-dep with `test-support` enabled so integration tests under
# `tests/` get the shared `test_support::build_test_app` HTTP scaffolding
# without each having to copy ~140 LoC of AppState-wiring boilerplate.
# Production builds remain unaffected — this is dev-deps only.
vta-service = { path = ".", features = ["test-support"] }
# Mock HTTP server for the did-hosting-daemon REST auth flow tests. Each
# test spins up a real local server bound to a random port, validates
# the JWS-signed request bodies the daemon would see, and serves
# canned responses — same wire protocol as production, but no daemon
# binary required. Loopback HTTP is accepted by `WebvhClient::new`'s
# HTTPS policy, so no insecure-test knob is needed.
wiremock = "0.6"

[lints]
workspace = true
