[package]
name = "vta-service"
description = "Service for Verifiable Trust Agents operating in Verifiable Trust Communities"
version = "0.11.8"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[features]
default = ["setup", "keyring", "rest", "didcomm", "cli-synthesis"]
rest = []
didcomm = []
# Trust Spanning Protocol transport. Additive and OFF by default (TSP rolls out
# gated; DIDComm stays in `default`). Enables the SDK's `tsp` capability; later
# PRs add the TSP listener + `services tsp` surface behind this flag.
tsp = [
    "vta-sdk/tsp",
    "dep:affinidi-messaging-sdk",
    "affinidi-messaging-sdk/tsp",
]
webvh = ["dep:didwebvh-rs", "dep:url", "dep:reqwest"]
setup = ["webvh", "dep:tempfile"]
# BBS+ (`bbs-2023`) credential support in the vault — pulls in the BLS12-381
# curve (`affinidi-bbs`) + the `bbs-2023` Data-Integrity cryptosuite. Off by
# default; the holder/verifier paths (receive, present, verify) build behind
# it. Issuer signing stays audit-gated (not exposed from the VTA).
bbs = ["dep:affinidi-bbs", "affinidi-data-integrity/bbs-2023"]
# Enables the offline CLI command helpers (bootstrap_cli, webvh_cli) that
# synthesize super-admin `AuthClaims` without wire-level verification. The
# local `vta` binary enables this; the enclave binary does not (its
# dependency is `default-features = false`), so the footgun is physically
# absent from enclave builds.
cli-synthesis = ["vti-common/cli-synthesis"]
# OS keyring backend for the VTA seed. Enables vta-sdk's keyring feature
# so the binary can register a platform store once via
# `vta_sdk::keyring_init::install_default_store()` at startup.
keyring = ["dep:keyring-core", "vta-sdk/keyring", "vti-secrets/keyring"]
config-seed = ["vti-secrets/config-seed"]
# The backend implementations + the setup wizard's secret-enumeration
# (`vti_secrets::discovery`) both live in `vti-secrets` now, so these features
# just activate the matching `vti-secrets/<feature>` — vta-service no longer
# carries the cloud SDKs / Vault / kube clients directly. (`aws-config` stays
# below: the TEE feature uses it for KMS bootstrap.)
aws-secrets = ["vti-secrets/aws-secrets"]
gcp-secrets = ["vti-secrets/gcp-secrets"]
azure-secrets = ["vti-secrets/azure-secrets"]
vault-secrets = ["vti-secrets/vault-secrets"]
# Kubernetes Secret backend — stores the master seed in a namespaced
# `Secret` resource. Off by default; deliberately enabled for in-cluster
# deployments that prefer native k8s Secrets over a cloud secret manager.
k8s-secrets = ["vti-secrets/k8s-secrets"]
tee = [
  "webvh",
  "dep:libc",
  "dep:aws-sdk-kms",
  "dep:aws-sdk-dynamodb",
  "dep:aws-config",
  "dep:aws-lc-rs",
  "dep:didwebvh-rs",
  "dep:cbc",
  "dep:aes",
  "vti-secrets/tee",
]
vsock-store = ["vti-common/vsock-store"]
# Exposes the test-harness helpers (in-memory keyspaces, VTA bootstrap
# for provision-integration) as `pub` items so integration tests under
# `tests/` can build complete VTA state the same way the lib unit tests
# do. Enable via a `[dev-dependencies]` `features = ["test-support"]`
# entry in the downstream crate. Not meant for production builds.
test-support = ["webvh", "dep:tempfile"]

[lib]
name = "vta_service"
path = "src/lib.rs"

[[bin]]
name = "vta"
path = "src/main.rs"
# `bootstrap_cli` and `webvh_cli` call
# `AuthClaims::unsafe_local_cli_super_admin`, which is gated on
# `vti-common/cli-synthesis`. Without this feature the binary cannot
# link, so let cargo skip it cleanly instead of failing with a
# "method not found" deep in the build.
required-features = ["cli-synthesis"]

[dependencies]
vti-common = { path = "../vti-common", version = "0.11", features = ["encryption", "passkey", "openapi"] }
# Seed-store backends + `create_seed_store` factory + `SecretsConfig` (lifted
# from this crate into a shared crate so external integrations can reuse them).
# Per-backend features are activated by this crate's matching features below.
vti-secrets = { path = "../vti-secrets", version = "0.1" }
vta-sdk = { path = "../vta-sdk", version = "0.19", features = ["didcomm", "sealed-transfer", "provision-integration", "openapi", "crypto-provider", "acl-setup"] }
# DID-VM-resolved WebAuthn assertion verifier — drives the new
# `vta/auth/passkey-login-{start,finish}/1.0` trust-task handlers.
# Distinct from `webauthn-rs` (which drives the passkey *enrolment*
# ceremony in `operations::passkey_vms`); this crate handles the
# *assertion* (login) path against DID-document VMs.
vti-webauthn = { path = "../vti-webauthn", version = "0.1" }
# Trust-Tasks framework — wire-envelope for the trust-task migration.
# `trust-tasks-rs` provides TrustTask<P>, Proof, dispatcher types.
# `trust-tasks-https` provides the HttpsHandler adapter + status-code
# mapping for the framework's error vocabulary.
# `trust-tasks-proof` provides AffinidiVerifier for embedded
# Data-Integrity proofs on trust-tasks themselves.
trust-tasks-rs = { workspace = true }
trust-tasks-https = { workspace = true }
trust-tasks-proof = { workspace = true }
# Shared CLI helpers for the consumer side of sealed-transfer (request
# generation, bundle opening). Used by `vta bootstrap request` /
# `vta bootstrap open` so cold-start clients can run the offline flow
# without depending on `pnm`.
vta-cli-common = { path = "../vta-cli-common", version = "0.10" }
affinidi-crypto = { workspace = true }
# Low-level `Secret` type for loading the VTA's signing key at
# provision time. Already transitively present via affinidi-tdk; made
# direct so `vta-service::operations::provision_integration` can name
# the type.
affinidi-secrets-resolver = { workspace = true }
# Data Integrity (eddsa-jcs-2022) — used by the vault/sign-trust-task
# handler to attach proofs to envelopes on behalf of the holder.
affinidi-data-integrity = { workspace = true }
# SD-JWT-VC issue/verify — the credential-vault receive path
# (`vault::receive`, vti-credential-architecture §5, task 1.2) verifies an
# incoming SD-JWT-VC's issuer signature + temporal validity before storing
# it. Promoted from a vta-sdk dev-dep (task 0.2) to a normal vta-service dep
# for this verify path. SD-JWT-VC only — BBS (`affinidi-bbs`) is audit-gated
# and not pulled in here.
affinidi-sd-jwt-vc = { workspace = true }
affinidi-sd-jwt = { workspace = true }
# BBS+ primitives + G2 issuer keys — only under the `bbs` feature.
affinidi-bbs = { workspace = true, optional = true }
# DCQL matcher — the holder runs a verifier's DCQL query over held credentials
# (`credential-exchange/query`, task 3.5). Same crate vta-sdk's QueryBody uses.
affinidi-openid4vp = { workspace = true }
# OID4VCI offer/request types + wallet builders — the holder `offer → request`
# leg (task 3.2). Same crate vta-sdk's OfferBody / RequestBody use.
affinidi-openid4vci = { workspace = true }
# Holder-side status refresh for held credentials (task 1.6): decode the
# issuer's BitstringStatusList and read the bit at the credential's index.
affinidi-status-list = { workspace = true }
hkdf = { workspace = true }
affinidi-tdk = { workspace = true }
affinidi-messaging-didcomm = "0.15"
# D2 P2a cut-over: the reliable-messaging delivery layer replaces the old
# `affinidi-messaging-didcomm-service` type-routed framework. `MessagingService`
# (subscribe/send/request over a `DidCommTransport`) drives inbound + outbound;
# `affinidi-messaging-core` supplies the transport contract types
# (`MessageTransport`, `Inbound`, `Protocol`); `VtiOutboxStore` (vti-common)
# backs the outbox. `DidCommTransport` comes from `affinidi-tdk::messaging`.
affinidi-messaging-delivery = { workspace = true }
affinidi-messaging-core = { workspace = true }
# `StreamExt::next` on the `BoxStream` returned by `MessagingService::subscribe`.
futures-util = "0.3"
# Direct (optional) dependency only so the `tsp` feature can turn on the
# messaging-SDK's own `tsp` ops (`atm.tsp()`), which are gated behind that
# crate's `tsp` feature and are NOT reachable via `affinidi-tdk/tsp`. The crate
# is already present transitively via `affinidi-tdk` at the same 0.18.x; this
# entry adds no new code when `tsp` is off (optional + default-features off).
affinidi-messaging-sdk = { version = "0.18", optional = true, default-features = false }
async-trait = "0.1"
affinidi-tdk-common = "0.6"
affinidi-did-resolver-cache-sdk = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
base64 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
# OpenAPI: `OpenApiRouter` makes the router the source of truth for the served
# `/openapi.json`; `utoipa` provides the `#[utoipa::path]` + `ToSchema` derives.
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
jsonwebtoken = { workspace = true }
fjall = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true, features = ["trace", "limit", "cors", "timeout"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_ignored = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Used by the password-POST proxy-login driver to form-encode credentials
# (operations::vault::password_post). Previously dev-only.
urlencoding = "2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bip39 = "2"
ed25519-dalek = { workspace = true }
ed25519-dalek-bip32 = { workspace = true }
hex = { workspace = true }
keyring-core = { workspace = true, optional = true }
# `aws-config` stays for the TEE feature (KMS bootstrap). The secret-store
# AWS / GCP / Azure SDKs + the Vault & kube clients moved to `vti-secrets`
# (backends in #503, the setup wizard's secret enumeration in #504 Phase 3).
aws-config = { version = "1", features = [
  "behavior-version-latest",
], optional = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
didwebvh-rs = { workspace = true, optional = true }
rand = { workspace = true }
dialoguer = { workspace = true }
# Locate `~/.config/vta/` for the `vta bootstrap request` / `vta bootstrap
# open` consumer-side seed cache. Default seed dir only — operators can
# override with `--seed-dir`.
dirs = { workspace = true }
sha2 = { workspace = true }
# Rego (OPA policy language) interpreter — the Policy Decision Point runs
# in-process (no OPA sidecar), mirroring vtc-service's engine. `arc` (workspace
# default) makes `regorus::Engine` Send + Sync so a compiled policy is shareable
# and cloned cheaply per evaluation; `full-opa` brings the stdlib builtins real
# policies lean on (regex, time).
regorus = { workspace = true }
# RFC 8785 JCS canonicalization — deterministic `Value` → bytes for the
# task-consent payload digest (an approver signs over the exact payload).
# Same crate vti-webauthn uses for document binding.
serde_json_canonicalizer = "0.3"
# Constant-time byte equality. Used by `backup_bundle_store` to
# verify backup-bundle bearer tokens against their stored
# `SHA-256(token)` hash without leaking byte-position via timing.
subtle = { workspace = true }
cbc = { version = "0.2", optional = true }
aes = { version = "0.9", optional = true }
x25519-dalek = { workspace = true }
multibase = { workspace = true }
p256 = "0.13"
# WebAuthn — used by `operations::passkey_vms` to drive the
# registration ceremony for passkey-as-verificationMethod enrolment.
webauthn-rs = { workspace = true }
webauthn-rs-proto = "0.5"
# CBOR decoder for parsing the WebAuthn attestationObject's authData
# so the VTA can re-derive the COSE public key and reject any
# tampered browser-supplied multikey.
ciborium = "0.2"
url = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tempfile = { version = "3", optional = true }
libc = { workspace = true, optional = true }
zeroize = { version = "1", features = ["derive"] }
tower = { version = "0.5", features = ["limit"] }
# Per-IP rate limiting for unauthenticated endpoints (`/bootstrap/request`,
# `/auth/*`) so a flood of requests can't burn CPU on attestation / crypto.
tower_governor = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
aes-gcm = { workspace = true }
argon2 = "0.5"
hmac = "0.13"
aws-sdk-kms = { version = "1", optional = true }
# Single-item monotonic counter for the P0.2b anti-rollback anchor (CAS via
# conditional UpdateItem). Same release train as aws-sdk-kms / aws-config.
aws-sdk-dynamodb = { version = "1", optional = true }
# RSA-OAEP for KMS CiphertextForRecipient unwrap. aws-lc-rs is AWS's own
# BoringSSL-based crypto lib; constant-time operations, already transitive
# via aws-sdk-* so no new build-time cost. Replaces the RustCrypto `rsa`
# crate (RUSTSEC-2023-0071 — non-constant-time PKCS#1 v1.5 / OAEP
# decryption). Our use was ephemeral-key + KMS-only so the advisory
# didn't map directly to exploitation, but dropping the dep frees us
# from the RustCrypto 0.11 ecosystem HOLD above.
aws-lc-rs = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
# Self-dep with `test-support` enabled so integration tests under
# `tests/` get the shared `test_support::build_test_app` HTTP scaffolding
# without each having to copy ~140 LoC of AppState-wiring boilerplate.
# Production builds remain unaffected — this is dev-deps only.
vta-service = { path = ".", features = ["test-support"] }
# Test-only: the SDK REST `VtaClient` + provision-client (the URL-direct
# `provision_admin_rotated_via_rest` + DI-signed REST auth) the `MockVta`
# bootstrap→provision e2e tests drive (issues #406, DI-auth follow-up). Kept out
# of the production `vta-sdk` dep above so the server build stays lean.
vta-sdk = { path = "../vta-sdk", version = "0.19", features = ["provision-client"] }
# Mock HTTP server for the did-hosting-daemon REST auth flow tests. Each
# test spins up a real local server bound to a random port, validates
# the JWS-signed request bodies the daemon would see, and serves
# canned responses — same wire protocol as production, but no daemon
# binary required. Loopback HTTP is accepted by `WebvhClient::new`'s
# HTTPS policy, so no insecure-test knob is needed.
wiremock = "0.6"
# Drives the focused request-timeout regression test (a standalone
# router with a short TimeoutLayer + a sleepy handler → 408). The
# production router uses the same layer at REQUEST_TIMEOUT; testing the
# wiring with a short duration keeps the test deterministic.
tower-http = { workspace = true, features = ["timeout"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
