[package]
name = "vtc-service"
description = "Service for Verifiable Trust Communities"
readme = "README.md"
version = "0.6.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["setup", "keyring", "website"]
setup = ["dep:dialoguer", "dep:didwebvh-rs", "dep:url"]
# Public community website (§12.1). Filesystem-backed static
# hosting at `website.root_dir`. Default-on so MVP `cargo run`
# serves a site; operators who host externally can compile it
# out via `--no-default-features --features setup,keyring`.
website = ["dep:mime_guess", "dep:unicode-normalization"]
# OS keyring backend for the VTC secret. Enables vta-sdk's keyring feature
# so the binary can register a platform store once via
# `vta_sdk::keyring_init::install_default_store()` at startup.
keyring = ["dep:keyring-core", "vta-sdk/keyring"]
config-secret = []
aws-secrets = ["dep:aws-sdk-secretsmanager", "dep:aws-config"]
gcp-secrets = [
  "dep:google-cloud-secretmanager-v1",
  "dep:google-cloud-auth",
  "dep:bytes",
]
azure-secrets = ["dep:azure_security_keyvault_secrets", "dep:azure_identity"]

[[bin]]
name = "vtc"
path = "src/main.rs"

[dependencies]
vti-common = { path = "../vti-common", version = "0.6", features = [
  "passkey",
  # `setup` gates the shared dialoguer-driven secrets-prompt helper
  # the wizard calls into.
  "setup",
] }
vta-sdk = { path = "../vta-sdk", version = "0.6", features = [
  "didcomm",
  "session",
  "config-session",
  # `provision-client` pulls in `provision-integration` + `sealed-transfer`
  # transitively, giving the `vtc setup` wizard the full
  # `run_provision` orchestration + `TemplateBootstrapPayload`
  # opener so it can bootstrap the VTC's identity against a VTA
  # (see `tasks/vtc-mvp/vta-driven-keys.md` §3).
  "provision-client",
] }
affinidi-tdk = { workspace = true }
affinidi-messaging-didcomm-service = { workspace = true }
# W3C VC builder + Data Integrity proof signing/verification. Used
# by `crate::credentials` for VMC + VEC issuance (Phase 2 M2.9).
# Same crates as `vta-sdk::provision_integration::credential` —
# canonical workspace path for credential issuance.
affinidi-vc = { workspace = true }
affinidi-data-integrity = { workspace = true }
affinidi-secrets-resolver = { workspace = true }
# Bitstring status list — privacy-preserving credential revocation
# per W3C. Used by `crate::status_list` (Phase 2 M2.10).
affinidi-status-list = { workspace = true }
# Reqwest — HTTP client for the in-tree trust-registry
# transport (Phase 3 M3.2's health probe + M3.10's TRQP
# query path). The crate is already in our transitive tree
# via affinidi-tdk; surfacing as a direct dep makes the
# version pin visible to clippy + cargo-audit.
reqwest = { workspace = true }
# `async-trait` — already a direct dep for emergency::VtaRecoveryProver;
# Phase 3's TrustRegistryClient trait reuses it.
# Lower-level DIDComm message types — needed for the join-request
# message handler in `messaging.rs` (M1.8.2). The service crate
# accepts `Message` / `UnpackMetadata` by value but doesn't
# re-export them.
affinidi-messaging-didcomm = "0.13"
tokio-util = { workspace = true, features = ["rt"] }
affinidi-did-resolver-cache-sdk = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
jsonwebtoken = { workspace = true }
fjall = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tower_governor = "0.8"
mime_guess = { version = "2", optional = true }
unicode-normalization = { version = "0.1", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
keyring-core = { workspace = true, optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-config = { version = "1", features = [
  "behavior-version-latest",
], optional = true }
google-cloud-secretmanager-v1 = { version = "1", optional = true }
google-cloud-auth = { version = "1", optional = true }
bytes = { version = "1", optional = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
didwebvh-rs = { workspace = true, optional = true }
rand = { workspace = true }
dialoguer = { workspace = true, optional = true }
azure_security_keyvault_secrets = { workspace = true, optional = true }
azure_identity = { workspace = true, optional = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { version = "1", features = ["derive"] }
multibase = { workspace = true }
# Rego policy interpreter (Phase 2 M2.1). Hosted in `crate::policy`.
# Spec §3-J + §7: regorus runs in-process; no external OPA sidecar.
regorus = { workspace = true }
url = { workspace = true, optional = true }
# BIP-39 mnemonic parsing for `vtc admin emergency-bootstrap` (M0.10).
# Same pin as `vta-service`.
bip39 = "2"
# Hostname capture for the `EmergencyBootstrapInvoked` audit event.
gethostname = "1"
# WebAuthn — used by `crate::webauthn` for Ed25519-only registration
# wrappers (M0.5.1). The protocol crate is a direct dep so we can
# reference `PubKeyCredParams` and `COSEAlgorithm` without funnelling
# them through `webauthn-rs::prelude` (which re-exports them but
# also surfaces ~300 unrelated symbols).
webauthn-rs = { workspace = true }
webauthn-rs-proto = "0.5"
# `async_trait` is the dyn-compatibility helper for the
# `emergency::VtaRecoveryProver` trait so production code +
# integration tests can swap in their own provers.
async-trait = "0.1"
# did:key → Ed25519 public-key conversion for the join-request
# holder-binding signature verifier (M1.8.1).
affinidi-crypto = { workspace = true }

[dev-dependencies]
tempfile = "3"
# Integration tests under `tests/` exercise the route stack via
# `Router::oneshot` — same pattern as `vta-service/tests/api_integration.rs`.
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
# CBOR encoding for the soft Ed25519 authenticator harness
# (`tests/common/webauthn_harness.rs`). Produces the CTAP attestation
# object + COSE public key on the same wire shape `webauthn-rs-core`
# parses (it uses `serde_cbor_2` internally — `ciborium` is canonical
# enough for both to agree).
ciborium = "0.2"

[lints]
workspace = true
